# used-kinds-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  render.yaml  start.sh
.cargo/: config.toml
src/: main.rs  nips_fetcher.rs  normalization.rs  qdrant_client.rs  service_manager.rs  similarity.rs  utils.rs
src/actors/: http_actor.rs  json_actor.rs  mod.rs  nostr_actor.rs
src/actors/json_actor/: get_recommended_app_string.rs
src/actors/nostr_actor/: get_recommended_app.rs
src/services/: http_service.rs  json_service.rs  mod.rs  nostr_service.rs  service_manager.rs
templates/: stats.hbs
