[package]
name = "used-kinds-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
config = "0.14.0"
console-subscriber = "0.2.0"
env_logger = "0.11.3"
handlebars = "5.1.2"
lazy_static = "1.4.0"
log = "0.4.21"
nostr-sdk = "0.29.0"
ractor = "0.9.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full", "net"] }
tokio-util = { version = "0.7.10", features = ["rt", "net"] }
tower-http = { version = "0.5.2", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
